--- a/angular.json
+++ b/angular.json
@@ -95,6 +95,12 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {
+            "baseHref": "https://sasha-si.github.io/angular-challenges/"
+          }
         }
       }
     }
