--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -26,7 +26,8 @@ jobs:
   deploy:
     environment:
       name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+      # url: ${{ steps.deployment.outputs.page_url }}
+      url: ${{ https://sasha-si.github.io/angular-challenges/ }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
