--- a/.github/workflows/gh-actions.yml
+++ b/.github/workflows/gh-actions.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Install Dependencies
         run: npm i  
       - name: Build
-        run: ng serve
+        run: ng deploy
 
   # Deployment job
   deploy:
